# playground

.github/workflows/: todoapp.yml
bigquery/xunit/: 0_fruits.sql  1_fruits_tvf.sql  2_fruits_less_than_tvf.sql  3_fruits_less_than_100.sql  4_test_fruits_less_than_100.sql  README.md
misc/dagger-todoapp/: .gitignore
node/chrome-extension-app/: background.js  content-script.js  manifest.json
node/comic-reader-app/: index.html
node/connect-web-example/: package.json
node/cucumber-app/: package.json
node/deepl-app/: index.js  package-lock.json  package.json
node/doctest-sample-app/: jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.doctest.json
node/embed-app/: index.js  package-lock.json  package.json
node/embed-app-serve/: NOTES.md  package-lock.json  package.json
node/github-graphql-tools/: index.js  package-lock.json  package.json
node/google-cloud-translate-document/: index.js  package-lock.json  package.json
node/google-drive-app/: .env.sample  .gitignore  README.md  index.js  package-lock.json  package.json
node/graphql-client-di/: README.md  package-lock.json  package.json
node/graphql-codegen-transform-lab/: .gitignore  codegen.yml  package-lock.json  package.json
node/json-app/: index.html
node/lit-app/: package-lock.json  package.json  rollup.config.js  web-dev-server.config.js  web-test-runner.config.js
node/lit-partytown-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
node/load-test/: .gitignore  README.md
rust/google-drive-app/: .gitignore  Cargo.toml
rust/google-drive-app/src/: main.rs
(+225 files in other folders)
