[package]
name = "google-drive-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
yup-oauth2 = "6.1.0"
google-drive3 = "2.0.10+20210322"
hyper = "0.14.16"
hyper-native-tls = "0.3.0"
tokio = { version = "1.14.0", features = ["full"] }